<resources>
    <string name="app_name">Полюс.Водитель</string>

    <string name="sign_in">Войти</string>
    <string name="login_hint">Логин:</string>
    <string name="password_hint">Пароль </string>

    <string name="email_hint">Email address </string>
    <string name="name_hint">Name </string>
    <string name="phone_hint">phone number </string>
    <string name="code_hint">confirmation code </string>
    <string name="confirm">confirm</string>
    <string name="new_code">Request new code</string>

    <string name="menu_home">На главную</string>
    <string name="menu_subscriptions">Подписки</string>
    <string name="menu_events">Мои события</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_excursions">Экскурсии</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_exit">Выход</string>
    <string name="menu_about_app">О приложении</string>
    <string name="title_activity_event">EventActivity</string>

    <string name="tomorrow">Завтра</string>
    <string name="today">Сегодня</string>
    <string name="all_days">Всё</string>
    <string name="my_events">МОИ</string>
    <string name="my_events_u"><u>Мои</u></string>
    <string name="follow">ИДУ</string>
    <string name="follow_u"><u>Иду</u></string>
    <string name="history">ИСТОРИЯ</string>
    <string name="history_u"><u>История</u></string>
    <string name="followers">Сейчас работает</string>

    <string name="name">Иван Николаев</string>
    <string name="description">Статус: в пути</string>

    <string name="event_address">Адрес:</string>
    <string name="event_more">больше</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
